Fix header button alignment

--- a/src/components/HeaderButton.css
+++ b/src/components/HeaderButton.css
@@ -6,7 +6,6 @@
 	width: 180px;
 	text-transform: uppercase;
 	font-weight: 600;
-	line-height: 60px;
 	text-align: center;
 	border: none;
 	font-size: inherit;
@@ -17,11 +16,11 @@
 
 .HeaderButton .icon {
 	margin-right: 10px;
+	margin-left: -0.5em;
 	opacity: 0.5;
-	vertical-align: middle;
 }
 
-.HeaderButton:hover  {
+.HeaderButton:hover {
 	color: var( --hm-dark-grey );
 }
 
